Refine capture workflow, fix UI, optimize performance, and fix obtrusive window

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,11 @@
         "tabs",
         "activeTab",
         "downloads",
-        "bookmarks"
+        "bookmarks",
+        "scripting"
+    ],
+    "host_permissions": [
+        "<all_urls>"
     ],
     "action": {
         "default_icon": {
