feat: Add Welcome Flow, Data Management, Safe Uninstall, and Cut/Copy/Paste
- Implemented Welcome Flow with auto-open on install and a 3-step wizard.
- Enhanced Data Management:
  - Storage monitoring and warnings.
  - Full backup export including image data (Base64).
  - Robust import and restore logic.
- Added Safe Uninstall flow:
  - 'Uninstall Extension' option in settings.
  - Auto-backup before uninstall.
  - Redirect to GitHub after uninstall.
- Implemented Cut/Copy/Paste for bookmarks and folders:
  - Recursive folder copying.
  - Smart paste logic.
- UI Refinements:
  - Improved Settings menu layout.
  - Fixed alignment and duplicate text issues.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,8 @@
         "activeTab",
         "downloads",
         "bookmarks",
-        "scripting"
+        "scripting",
+        "management"
     ],
     "host_permissions": [
         "<all_urls>"
