Fix: Enable Incognito Split Mode to allow extension pages in Incognito

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,7 @@
     "host_permissions": [
         "<all_urls>"
     ],
+    "incognito": "split",
     "action": {
         "default_icon": {
             "16": "icons/icon16.png",
