feat: Implement Shared Storage and Optimize Capture Performance
- Migrated thumbnail storage to `chrome.storage.local` for Incognito compatibility (Split Mode).
- Added `ThumbnailStorage` service with lazy migration from IndexedDB.
- Optimized capture:
  - Switched to JPEG format (quality 80) for speed.
  - Implemented parallel batch capture (concurrency: 3).
  - Reduced post-load wait time to 500ms.
- Fixed `BackupManager` to handle metadata-only records gracefully.
- Updated `manifest.json` with `unlimitedStorage` and `incognito: split`.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,8 @@
         "downloads",
         "bookmarks",
         "scripting",
-        "management"
+        "management",
+        "unlimitedStorage"
     ],
     "host_permissions": [
         "<all_urls>"
