feat: Force re-capture, context-aware capture, and error handling
- Implemented Shift+Click to force re-capture thumbnails
- Added context-aware capture (Normal vs Incognito) based on triggering window
- Renamed "Use Incognito" to "Open in Incognito Window"
- Added error handling for unreachable sites (generates error thumbnail)
- Added webNavigation permission

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,8 @@
         "bookmarks",
         "scripting",
         "management",
-        "unlimitedStorage"
+        "unlimitedStorage",
+        "webNavigation"
     ],
     "host_permissions": [
         "<all_urls>"
